# ratatui-bubbletea

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/ratatui-bubbletea-components/: Cargo.toml
crates/ratatui-bubbletea-components/examples/: bubbletea-help.rs  bubbletea-list-simple.rs  bubbletea-pager.rs  bubbletea-progress-static.rs  bubbletea-result.rs  bubbletea-showcase.rs  bubbletea-spinner.rs  bubbletea-table.rs  bubbletea-tabs.rs  bubbletea-textinput.rs  help-footer.rs  list.rs  progress.rs  spinner.rs  table.rs  textinput.rs  viewport.rs
crates/ratatui-bubbletea-components/src/: help.rs  key.rs  lib.rs  list.rs  progress.rs  spinner.rs  table.rs  text_input.rs  viewport.rs
crates/ratatui-bubbletea-theme/: Cargo.toml
crates/ratatui-bubbletea-theme/examples/: themed-widgets.rs
crates/ratatui-bubbletea-theme/src/: lib.rs
crates/ratatui-tea/: Cargo.toml
crates/ratatui-tea/examples/: bubbletea-sequence.rs  bubbletea-simple.rs  tea-counter.rs
crates/ratatui-tea/src/: lib.rs
docs/: examples.md  milestones.md  research-and-plan.md  status.md  usage-existing-ratatui.md  usage-new-tea-app.md
