[workspace]
resolver = "2"
members = [
    "crates/ratatui-bubbletea-components",
    "crates/ratatui-bubbletea-theme",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/akitaonrails/ratatui-bubbletea"
homepage = "https://github.com/akitaonrails/ratatui-bubbletea"
documentation = "https://docs.rs/ratatui-bubbletea-theme"
keywords = ["ratatui", "tui", "terminal", "bubbletea", "theme"]
categories = ["command-line-interface"]

[workspace.dependencies]
ratatui = { version = "0.30.1", path = "../ratatui/ratatui", default-features = false }
ratatui-bubbletea-theme = { path = "crates/ratatui-bubbletea-theme" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
