[package]
name = "ratatui-bubbletea-components"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bubbles-inspired ratatui components"

[dependencies]
ratatui.workspace = true
ratatui-bubbletea-theme.workspace = true

[dev-dependencies]
ratatui = { workspace = true, features = ["crossterm"] }

[lints]
workspace = true
