[package]
name = "ratatui-bubbletea-theme"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Charm/Bubble Tea-inspired theme helpers for ratatui"

[dependencies]
ratatui.workspace = true

[lints]
workspace = true
